<resources>
    <string name="app_name">Mapas&amp;Multimidias</string>
    <string name="recuperando_fotos_com_imageview">Recuperando fotos com ImageView</string>
    <string name="utilizando_mapas_mapview">Utilizando mapas: MapView</string>
    <string name="localiza_usuario_com_location_api">Localização do usuário com Location API</string>
    <string name="rotas">Rotas</string>
    <string name="pontos_interesse">Pontos Interesse</string>
    <string name="usando_webview_em_seus_apps">Usando WebView em seus Apps</string>
    <string name="sons_audio_manager">Sons: Audio Manager</string>
    <string name="videos_mediaplayer">Videos: MediaPlayer</string>
    <string name="anima_o_em_views_com_views_animtation">Animação em views com Views Animtation</string>
    <string name="imagem_view">imagem_view</string>
    <string name="uma_imagem_aqui">UMA IMAGEM AQUI</string>
    <string name="textview1">TextView</string>
    <string name="textview2">TextView2</string>
    <string name="toque_na_imagem_do_animal">Toque na imagem do animal</string>
    <string name="dog">dog</string>
    <string name="cow">cow</string>
    <string name="pausa_btn">pausa_btn</string>
    <string name="upload_button">upload_button</string>
    <string name="play_button">play_button</string>
    <string name="stop_button">stop_button</string>
    <string name="fiap_sp">FIAP SP</string>
</resources>