<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".VideoMediaPlayer">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <ImageButton
            android:id="@+id/btn_upload"
            android:layout_width="50dp"
            android:layout_height="50dp"
            android:layout_weight="1"
            android:contentDescription="@string/upload_button"
            android:scaleType="centerInside"
            app:srcCompat="@drawable/upload"
            tools:ignore="RedundantDescriptionCheck,ImageContrastCheck" />

        <ImageButton
            android:id="@+id/btn_continuar"
            android:layout_width="50dp"
            android:layout_height="50dp"
            android:layout_weight="1"
            android:contentDescription="@string/pausa_btn"
            android:scaleType="centerInside"
            app:srcCompat="@drawable/pausa"
            tools:ignore="RedundantDescriptionCheck" />

        <ImageButton
            android:id="@+id/btn_play"
            android:layout_width="50dp"
            android:layout_height="50dp"
            android:layout_weight="1"
            android:contentDescription="@string/play_button"
            android:scaleType="centerInside"
            app:srcCompat="@drawable/play"
            tools:ignore="RedundantDescriptionCheck,ImageContrastCheck" />

        <ImageButton
            android:id="@+id/btn_stop"
            android:layout_width="50dp"
            android:layout_height="50dp"
            android:layout_weight="1"
            android:contentDescription="@string/stop_button"
            android:scaleType="centerInside"
            app:srcCompat="@drawable/stop"
            tools:ignore="RedundantDescriptionCheck,ImageContrastCheck" />
    </LinearLayout>

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <VideoView
            android:id="@+id/vv"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_alignParentStart="true"
            android:layout_alignParentTop="true"
            android:layout_alignParentBottom="true"
            android:visibility="visible" />

        <ProgressBar
            android:id="@+id/progress"
            style="@style/Widget.AppCompat.ProgressBar.Horizontal"
            android:layout_width="200dp"
            android:layout_height="200dp"
            android:layout_below="@id/vv"
            android:layout_centerInParent="true"
            android:layout_marginTop="20dp"
            android:layout_marginBottom="20dp"
            android:visibility="gone" />
    </RelativeLayout>

</LinearLayout>